BUT-211 fixed: b:tree shows initially a wrong icon on collapsed nodes; optimized cursor style on nodes

--- a/components/src/main/resources/META-INF/resources/butterfaces-css/butterfaces-tree.css
+++ b/components/src/main/resources/META-INF/resources/butterfaces-css/butterfaces-tree.css
@@ -37,6 +37,12 @@
     display: none;
 }
 
+.butter-component-tree-node,
+.butter-component-tree-icon,
+.butter-component-tree-title {
+    cursor: pointer;
+}
+
 .butter-component-tree-row .butter-component-tree-title {
     display: inline-block;
     width: calc(100% - 32px);
@@ -45,13 +51,11 @@
 .butter-component-tree-node-selected > .butter-component-tree-row .butter-component-tree-title,
 .butter-component-tree-title:hover {
     border-radius: 4px;
-    cursor: pointer;
 }
 
 .butter-component-tree-no-icons .butter-component-tree-node-selected > .butter-component-tree-row .butter-component-tree-title,
 .butter-component-tree-no-icons .butter-component-tree-title:hover {
     width: calc(100% - 16px);
-    cursor: pointer;
 }
 
 .butter-component-tree-node-selected > .butter-component-tree-row .butter-component-tree-title {
